- Default theme now has the borders for messages correctly on top of messages - both themes now use hex colours rather than RGB for border-top of messages

--- a/static/themes/default/theme.css
+++ b/static/themes/default/theme.css
@@ -509,7 +509,7 @@
 }
 
 .kiwi-messagelist-message--modern {
-  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+  border-top: 1px solid #f3f3f3;
 }
 
 .kiwi-messagelist-message--modern.kiwi-messagelist-message--authorrepeat {
