--- a/static/themes/dark/theme.css
+++ b/static/themes/dark/theme.css
@@ -564,7 +564,7 @@
 }
 
 .kiwi-messagelist-message--modern {
-  border-top: 1px solid rgba(255, 255, 255, 0.1);
+  border-top: 1px solid #ffffff1a;
 }
 
 .kiwi-messagelist-message--modern.kiwi-messagelist-message--authorrepeat {
