--- a/static/themes/dark/theme.css
+++ b/static/themes/dark/theme.css
@@ -1206,10 +1206,11 @@
     border-left-color: #939393;
 }
 
-.kiwi-messagelist-message.kiwi-messagelist-message--hover {
+.kiwi-messagelist-message.kiwi-messagelist-message--hover,
+.kiwi-messagelist-message.kiwi-messagelist-message-traffic--hover {
     position: relative;
     opacity: 1;
-    border-color: #42b992;
+    border-color: #dedede;
 }
 
 /* MOTD */
