--- a/static/themes/default/theme.css
+++ b/static/themes/default/theme.css
@@ -1103,9 +1103,10 @@
     border-left-color: #939393;
 }
 
-.kiwi-messagelist-message.kiwi-messagelist-message--hover {
+.kiwi-messagelist-message.kiwi-messagelist-message--hover,
+.kiwi-messagelist-message.kiwi-messagelist-message-traffic--hover {
     position: relative;
-    border-color: #42b992;
+    border-color: #c9c9c9;
     opacity: 1;
 }
 
