- Solves the topic sometimes not having a bordr at the top or bottom.

--- a/static/themes/dark/theme.css
+++ b/static/themes/dark/theme.css
@@ -512,11 +512,12 @@
 }
 
 /* Topic Styling */
-.kiwi-messagelist-message-topic {
+.kiwi-messagelist-message--compact.kiwi-messagelist-message-topic,
+.kiwi-messagelist-message--modern.kiwi-messagelist-message-topic {
     background: rgba(0,0,0,0.02);
     border: 2px solid #42b992;
     color: #dedede;
-}
+}   
 
 .kiwi-messagelist-message-traffic-join {
     color: #090;
