--- a/static/themes/default/theme.css
+++ b/static/themes/default/theme.css
@@ -267,7 +267,8 @@
     background: #fff;
 }
 
-.kiwi-header-topic {
+.kiwi-messagelist-message--compact.kiwi-messagelist-message-topic,
+.kiwi-messagelist-message--modern.kiwi-messagelist-message-topic {
     border-top: 2px solid #42b992;
     border-bottom: 1px solid #42b992;
     color: #5f5f5f;
