--- a/static/themes/default/theme.css
+++ b/static/themes/default/theme.css
@@ -395,6 +395,10 @@
     font-style: italic;
 }
 
+.kiwi-messagelist-message--highlight {
+    background-color: #f2f2f2;
+}
+
 /*When hovering over a users messages */
 .kiwi-messagelist-message--hover{
     background-color: #f2f2f2;
@@ -1105,6 +1109,7 @@
 }
 
 .kiwi-messagelist-message.kiwi-messagelist-message--hover,
+.kiwi-messagelist-message.kiwi-messagelist-message--highlight,
 .kiwi-messagelist-message.kiwi-messagelist-message-traffic--hover {
     position: relative;
     border-color: #c9c9c9;
