--- a/static/themes/dark/theme.css
+++ b/static/themes/dark/theme.css
@@ -313,7 +313,7 @@
 }
 
 .kiwi-header-topic {
-    border-top: 2px solid #42b992;
+    border-top: 1px solid #42b992;
     border-bottom: 1px solid #42b992;
     color: #dedede;
 }
@@ -407,7 +407,6 @@
 
 .kiwi-controlinput-active-tool {
     background: #f6f6f6;
-    border: 1px solid #ddd;
 }
 
 .kiwi-messagelist {
@@ -484,7 +483,7 @@
 
 .kiwi-messagelist-message.kiwi-messagelist-message-connection-connected .kiwi-messagelist-body {
     background-color: #42b992;
-    color: #dedede;
+    color: #fff;
 }
 
 .kiwi-messagelist-message.kiwi-messagelist-message-connection-disconnected .kiwi-messagelist-body {
@@ -767,8 +766,11 @@
 /* Self User ( SelfUser.vue ) */
 .kiwi-controlinput-selfuser {
     background: #201F1F;
-    border: 1px solid #ddd;
     color: #dedede;
+}
+
+.kiwi-controlinput-selfuser.kiwi-controlinput-selfuser--open {
+    border: 1px solid #ddd;
 }
 
 .kiwi-selfuser-actions {
