--- a/static/themes/default/theme.css
+++ b/static/themes/default/theme.css
@@ -238,20 +238,31 @@
     border-left: 1px solid rgba(0, 0, 0, 0.2);
 }
 .kiwi-header-option a:hover,
-.kiwi-header-option--active a,
+.kiwi-header-option--active:hover a,
 .kiwi-header-option.kiwi-header-option-active {
     background-color: #42b992;
     color: #fff;
     opacity: 1;
 }
-.kiwi-header-option--active {
-    border-left: 1px solid #42b992;
+
+.kiwi-header-option--active,
+.kiwi-header-option.kiwi-header-option-active {
+    border-left: none;
+    opacity: 1;
 }
-.kiwi-header-option-topic.kiwi-header-option--active,
+
+/* For active buttons, since they are not being hovered, we need to set the child element opacity to 1 */
+.kiwi-header-option.kiwi-header-option-active a{
+    opacity: 1;
+}
+
+/* Leave channel */
 .kiwi-header-option-leave a:hover {
     background-color: #d16c6c;
     color: #fff;
 }
+
+
 
 /* The link to click if the user has not joined this channel */
 .kiwi-header .kiwi-header-notjoined .u-link {
