--- a/static/themes/dark/theme.css
+++ b/static/themes/dark/theme.css
@@ -496,8 +496,24 @@
     background: #1e1e1e;
 }
 
+/* Sidebar ( Sidebar.vue ) */
+.kiwi-sidebar-options {
+    background-color: #42b992;
+    color: #dedede;
+}
+.kiwi-pin-sidebar-icon {
+    border-right: 1px solid #fff;
+    background: #42b992;
+}
+.kiwi-pin-sidebar-icon:hover{
+    background: #62d0ac;
+}
+
+.kiwi-sidebar-options .kiwi-close-sidebar:hover {
+    background: #d16c6c;
+}
 .kiwi-container--sidebar-pinned .kiwi-sidebar {
-    border-color: #464646;
+    border-color: #b2b2b2;
 }
 
 .kiwi-sidebar .u-form label input[type="text"],
@@ -801,15 +817,7 @@
     font-weight: 900;
 }
 
-/* Sidebar ( Sidebar.vue ) */
-.kiwi-sidebar-options {
-    background-color: #42b992;
-    color: #dedede;
-}
 
-.kiwi-sidebar-options:hover {
-    background: #d16c6c;
-}
 
 /* Statebrowser - Left sidebar ( StateBrowser.vue ) */
 .kiwi-statebrowser {
