- Changed naming convention of kiwi-pin-sidebar-icon to kiwi-sidebar-pin

--- a/static/themes/dark/theme.css
+++ b/static/themes/dark/theme.css
@@ -501,11 +501,11 @@
     background-color: #42b992;
     color: #dedede;
 }
-.kiwi-pin-sidebar-icon {
+.kiwi-sidebar-pin {
     border-right: 1px solid #fff;
     background: #42b992;
 }
-.kiwi-pin-sidebar-icon:hover{
+.kiwi-sidebar-pin:hover {
     background: #62d0ac;
 }
 
