--- a/static/themes/default/theme.css
+++ b/static/themes/default/theme.css
@@ -255,13 +255,17 @@
     opacity: 1;
 }
 
+/* Remove the border from the un-pin icon */
+.kiwi-header-option-unpinsidebar {
+    border-left: none;
+}
+
 /* Leave channel */
-.kiwi-header-option-leave a:hover {
+.kiwi-header-option-leave a:hover,
+.kiwi-header-option-unpinsidebar a:hover {
     background-color: #d16c6c;
     color: #fff;
 }
-
-
 
 /* The link to click if the user has not joined this channel */
 .kiwi-header .kiwi-header-notjoined .u-link {
