- Notiication setting radio buttons now use the same style as the checkboxes for consistancy - Renamed the checkbox-holder's to follow correct Kiwi naming convention - Adding in theme styling for the radio buttons - Moved the checkboxes out of indented less and moved them to the global style sheet, as they are used in more than one component

--- a/static/themes/dark/theme.css
+++ b/static/themes/dark/theme.css
@@ -131,16 +131,19 @@
     max-width: none;
 }
 
-.u-form input[type='checkbox'] {
+.u-form input[type='checkbox'],
+.u-form input[type='radio'] {
     border: 2px solid #000;
     background-color: #ffffff;
 }
 
-.u-form input[type='checkbox']:after {
+.u-form input[type='checkbox']:after,
+.u-form input[type='radio']:after {
     background: #42b992;
 }
 
-.u-form input[type='checkbox']:after {
+.u-form input[type='checkbox']:after,
+.u-form input[type='radio']:after {
     background: #42b992;
 }
 
