--- a/static/themes/dark/theme.css
+++ b/static/themes/dark/theme.css
@@ -513,7 +513,7 @@
     background: #62d0ac;
 }
 
-.kiwi-sidebar-options .kiwi-close-sidebar:hover {
+.kiwi-sidebar-options .kiwi-sidebar-close:hover {
     background: #d16c6c;
 }
 .kiwi-container--sidebar-pinned .kiwi-sidebar {
@@ -1070,15 +1070,6 @@
 
 .kiwi-statebrowser-newchannel-inputwrap--focus {
     opacity: 1;
-}
-
-.kiwi-statebrowser-usermenu-body .close-icon {
-    background-color: #fc6262;
-    color: #dedede;
-}
-
-.kiwi-statebrowser-usermenu-body .close-icon:hover {
-    background-color: #fe7575;
 }
 
 .kiwi-statebrowser-switcher a:first-of-type {
