- Usernames on Kiwi traditonal that are normally hidden due to length, will now show correcly on traditional view - Added background colour on hover for the user nicks - Added width auto on hover for the user nicks on compact ( compact has a set width without hover ) - Dark theme now uses hex colour codes for highlight and --hover states rather than rga

--- a/static/themes/default/theme.css
+++ b/static/themes/default/theme.css
@@ -509,6 +509,10 @@
     color: #000;
 }
 
+.kiwi-messagelist-message--compact .kiwi-messagelist-nick:hover {
+    background-color: #f2f2f2;
+}
+
 .kiwi-messagelist-time {
     color: #a0a09f;
 }
