--- a/static/themes/dark/theme.css
+++ b/static/themes/dark/theme.css
@@ -461,12 +461,12 @@
 }
 
 .kiwi-messagelist-message--highlight{
-    background-color: rgba(255, 255, 255, 0.1);
+    background-color: #5a5a5a;
 }
 
 /*When hovering over a users messages */
 .kiwi-messagelist-message--hover{
-    background-color: rgba(255, 255, 255, 0.1);
+    background-color: #dedede;
 }
 
 .kiwi-messagelist-message--modern .kiwi-messagelist-body {
@@ -521,7 +521,7 @@
     background: rgba(0,0,0,0.02);
     border: 2px solid #42b992;
     color: #dedede;
-}   
+}
 
 .kiwi-messagelist-message-traffic-join {
     color: #090;
@@ -568,6 +568,10 @@
 }
 .kiwi-messagelist-nick {
     color: #000;
+}
+
+.kiwi-messagelist-message--compact .kiwi-messagelist-nick:hover {
+    background-color: #dedede;
 }
 
 .kiwi-messagelist-time {
