- adds a simple border to the statebrowser on radioactive theme

--- a/static/themes/radioactive/theme.css
+++ b/static/themes/radioactive/theme.css
@@ -687,6 +687,7 @@
 .kiwi-statebrowser {
     background: #1b2f24;
     color: #fff;
+    border-right: 1px solid #6fffb0;
 }
 .kiwi-statebrowser-divider {
     background: rgba(255, 255, 255, 0.3);
