--- a/static/themes/coffee/theme.css
+++ b/static/themes/coffee/theme.css
@@ -425,7 +425,7 @@
     color: #fff;
 }
 .kiwi-messagelist-message.kiwi-messagelist-message-connection-disconnected .kiwi-messagelist-body {
-    background-color: #f16f74;
+    background-color: #a54d4d;
     color: #fff;
 }
 
@@ -589,7 +589,7 @@
 /* Not connected message ( NotConnected.vue ) */
 .kiwi-notconnected {
     color: #fff;
-    background-color: #bf5155;
+    background-color: #a54d4d;
 }
 .kiwi-notconnected-button {
     border: 2px solid #fff;
