- added background for when user changes nick on radioactive theme

--- a/static/themes/radioactive/theme.css
+++ b/static/themes/radioactive/theme.css
@@ -401,7 +401,7 @@
     font-style: italic;
 }
 .kiwi-messagelist-message--highlight {
-    background-color: #f2f2f2;
+    background-color: #629477;
 }
 
 /* Standard username and usertime styling */
