--- a/static/themes/dark/theme.css
+++ b/static/themes/dark/theme.css
@@ -462,7 +462,7 @@
     color: #3a99e1;
 }
 
-.kiwi-container-empty .u-button {
+.kiwi-fallback-container .u-button {
     background-color: #42b992;
     color: #fff;
 }
