--- a/static/themes/default/theme.css
+++ b/static/themes/default/theme.css
@@ -657,7 +657,7 @@
 }
 
 /* Not connected message ( NotConnected.vue ) */
-.kiwi-notconnected {
+.kiwi-warning-block {
     color: #fff;
     background-color: #bf5155;
 }
@@ -1119,4 +1119,9 @@
 /* MOTD */
 .kiwi-messagelist-message-motd {
     color: #666;
+}
+
+/* Buffer Key */
+.kiwi-bufferkey-button {
+    border: 1px solid #fff;
 }
