--- a/static/themes/coffee/theme.css
+++ b/static/themes/coffee/theme.css
@@ -1005,3 +1005,18 @@
     color: #a2846e;
     text-decoration: underline;
 }
+
+/* Icons in the Channel List */
+.kiwi-statebrowser-channel[data-name^="#"]::before {
+    content: '\f0c0';
+}
+.kiwi-statebrowser-channel[data-name^="#help"]::before {
+    content: '\f059';
+}
+
+.kiwi-statebrowser-channel::before {
+    content: '\f007';
+    font-family: fontAwesome;
+    margin-right: 5px;
+    font-weight: 100;
+}
