--- a/static/themes/default/theme.css
+++ b/static/themes/default/theme.css
@@ -967,3 +967,18 @@
 .kiwi-bufferkey-button {
     border: 1px solid #fff;
 }
+
+/* Icons in the Channel List */
+.kiwi-statebrowser-channel[data-name^="#"]::before {
+    content: '\f0c0';
+}
+.kiwi-statebrowser-channel[data-name^="#help"]::before {
+    content: '\f059';
+}
+
+.kiwi-statebrowser-channel::before {
+    content: '\f007';
+    font-family: fontAwesome;
+    margin-right: 5px;
+    font-weight: 100;
+}
