--- a/static/themes/grayfox/theme.css
+++ b/static/themes/grayfox/theme.css
@@ -974,3 +974,18 @@
     background-color: #414956;
     color: #fff;
 }
+
+/* Icons in the Channel List */
+.kiwi-statebrowser-channel[data-name^="#"]::before {
+    content: '\f0c0';
+}
+.kiwi-statebrowser-channel[data-name^="#help"]::before {
+    content: '\f059';
+}
+
+.kiwi-statebrowser-channel::before {
+    content: '\f007';
+    font-family: fontAwesome;
+    margin-right: 5px;
+    font-weight: 100;
+}
