--- a/static/themes/sky/theme.css
+++ b/static/themes/sky/theme.css
@@ -975,3 +975,18 @@
 .kiwi-messagelist-message-motd {
     color: #666;
 }
+
+/* Icons in the Channel List */
+.kiwi-statebrowser-channel[data-name^="#"]::before {
+    content: '\f0c0';
+}
+.kiwi-statebrowser-channel[data-name^="#help"]::before {
+    content: '\f059';
+}
+
+.kiwi-statebrowser-channel::before {
+    content: '\f007';
+    font-family: fontAwesome;
+    margin-right: 5px;
+    font-weight: 100;
+}
